[gd_scene load_steps=14 format=2]

[ext_resource path="res://Scenes/ParallaxBackground.tscn" type="PackedScene" id=1]
[ext_resource path="res://Fonts and themes/Silkscreen-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Scripts/GameOverMenu.gd" type="Script" id=3]
[ext_resource path="res://Scenes/Crosshair.tscn" type="PackedScene" id=4]
[ext_resource path="res://Sounds and music/Music/Victory Tune.ogg" type="AudioStream" id=5]
[ext_resource path="res://Sounds and music/Music/Defeated (Game Over Tune).ogg" type="AudioStream" id=6]

[sub_resource type="DynamicFont" id=1]
size = 40
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 40
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 28
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 22
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.105882, 0.00784314, 0.345098, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.301961, 0.0431373, 0.941176, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.2, 0.027451, 0.627451, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[node name="GameOverMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="ParallaxBackground" parent="." instance=ExtResource( 1 )]

[node name="NewHighScoreLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -200.0
margin_top = 50.0
margin_right = 200.0
margin_bottom = 52.0
custom_colors/font_color = Color( 1, 0.980392, 0.0156863, 1 )
custom_fonts/font = SubResource( 1 )
text = "New high score!"

[node name="GameOverLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -200.0
margin_top = 177.0
margin_right = 200.0
margin_bottom = 229.0
custom_fonts/font = SubResource( 2 )
text = "Game over"
align = 1

[node name="ScoreLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -200.0
margin_top = 289.0
margin_right = 200.0
margin_bottom = 341.0
custom_fonts/font = SubResource( 3 )
text = "Score: "

[node name="HighScoreLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -200.0
margin_top = 369.0
margin_right = 200.0
margin_bottom = 421.0
custom_fonts/font = SubResource( 3 )
text = "Highscore: "

[node name="MainMenuButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.971
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -76.0
margin_top = -102.6
margin_right = 79.0
margin_bottom = -85.0
custom_fonts/font = SubResource( 4 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
text = "Main menu"

[node name="Crosshair" parent="." instance=ExtResource( 4 )]

[node name="FireworksTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="HighscoreSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -10.0

[node name="GameOverSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -10.0

[connection signal="pressed" from="MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
[connection signal="timeout" from="FireworksTimer" to="." method="_on_FireworksTimer_timeout"]
